--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,56 @@
 html,
-body {
+html {
     height: 100%;
     overflow-y: auto;
+    background: linear-gradient(-20deg, #1e252f00, #2a3440);
+}
+
+body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+body>.content-wrapper {
+    width: 100%;
+    max-width: 1200px;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+h2 {
+    transform:
+        perspective(600px) rotateX(-10deg);
+}
+
+
+.paper-effect {
+    all: unset;
+    display: block;
+    padding: 1rem;
+    background: transparent;
+    padding: 2px;
+
+    background-size: 20px 20px;
+    box-shadow: 0px 25px 40px 0px rgba(0, 0, 0, 1);
+    transform: perspective(600px) rotateX(8deg) scale(0.8);
+
+    background-image: linear-gradient(120deg, rgba(245, 222, 179, 0.173) 2px, transparent 0);
+
+}
+
+/*
+ border-left: 5px solid white;
+    border-top: 5px solid white;
+*/
+
+.paper-footer {
+    transform: perspective(600px) rotateX(-40deg) scale(0.8) translateZ(20px);
+    border-radius: 4px;
 }
 
 .profile-section {
@@ -63,7 +112,41 @@ body {
     border: 1px solid #ddd;
     padding: 1rem;
     border-radius: 0.5rem;
+    transition: transform 0.2s ease;
+
 }
+
+a {
+
+    display: inline-block;
+    outline: 0;
+    text-align: center;
+    cursor: pointer;
+    min-width: 80px;
+    height: 32px;
+    color: rgb(255, 255, 255);
+
+
+
+}
+
+
+
+.card:hover {
+    box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
+
+    z-index: 1000;
+    transform: perspective(600px) translateZ(150px);
+
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.2px);
+    -webkit-backdrop-filter: blur(2.2px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+
+}
+
 
 .tech-categories {
     display: flex;
@@ -79,6 +162,7 @@ body {
     align-items: flex;
 }
 
+
 .tech-category-title {
     margin-bottom: 0.3rem;
     font-weight: 600;
@@ -93,6 +177,8 @@ body {
     gap: 0.1rem;
 }
 
+
+
 .devicon {
     width: 42px;
     height: 42px;
@@ -101,7 +187,11 @@ body {
 }
 
 .devicon:hover {
-    transform: scale(1.1);
+    background-color: rgb(19, 22.5, 30.5);
+    box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
+
+    z-index: 1000;
+    transform: scale(1.1) perspective(600px) translateZ(250px);
     opacity: 1;
 }
 
@@ -118,6 +208,5 @@ body {
 
     .tech-categories {
         flex-direction: column;
-        /* Stack categories vertically on small screens */
     }
 }
