--- a/styles.css
+++ b/styles.css
@@ -13,34 +13,34 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    perspective: 1000px;
+    /* Added to ensure 3D perspective for all children */
+    transform-style: preserve-3d;
+    /* Preserve 3D transformations */
 }
 
-body>.content-wrapper {
-    width: 100%;
-    max-width: 1200px;
-    border-radius: 6px;
-    box-sizing: border-box;
-}
 
 h2 {
     transform:
         perspective(600px) rotateX(-10deg);
 }
 
-
 .paper-effect {
     all: unset;
-    display: block;
+    display: flex;
+    flex-direction: column;
+
     padding: 1rem;
     background: transparent;
     padding: 2px;
 
     background-size: 20px 20px;
     box-shadow: 0px 25px 40px 0px rgba(0, 0, 0, 1);
-    transform: perspective(600px) rotateX(8deg) scale(0.8);
+    transform: perspective(600px) rotateX(8deg) scale(1.0);
 
     background-image: linear-gradient(120deg, rgba(245, 222, 179, 0.173) 2px, transparent 0);
 
+    justify-content: center;
 }
 
 /*
@@ -58,8 +58,10 @@ h2 {
     flex-wrap: wrap;
     align-items: center;
     gap: 2rem;
-    max-width: 900px;
-    margin: 2rem auto;
+    max-width: 950px;
+    margin-top: 2.5%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .profile-img {
@@ -70,16 +72,29 @@ h2 {
     border-radius: 50%;
 }
 
-.description {
+.presentation {
     flex: 1;
     font-size: 1.1rem;
     line-height: 1.5;
 }
 
-.description h1,
-.description h3 {
+.presentation h1,
+.presentation h3 {
     margin-top: 0;
     margin-bottom: 0.5rem;
+}
+
+.highlight {
+    color: #b4937D;
+}
+
+.keyword {
+    color: #b4937D;
+}
+
+.description {
+    text-align: center;
+    font-size: 1.1rem;
 }
 
 .profile-links {
@@ -102,22 +117,7 @@ h2 {
     height: 20px;
 }
 
-.card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
-}
-
-.card {
-    border: 1px solid #ddd;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    transition: transform 0.2s ease;
-
-}
-
 a {
-
     display: inline-block;
     outline: 0;
     text-align: center;
@@ -125,34 +125,48 @@ a {
     min-width: 80px;
     height: 32px;
     color: rgb(255, 255, 255);
+}
 
-
-
+#t3-projects-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 10%;
 }
 
 
+.card-grid {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 364px));
+    gap: 1.5rem;
+    margin-bottom: 20px;
+}
+
+.card {
+    border: 1px solid #ddd;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    transition: transform 0.2s ease;
+}
 
 .card:hover {
     box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
-
     z-index: 1000;
     transform: perspective(600px) translateZ(150px);
-
     background: rgba(255, 255, 255, 0.05);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(4.2px);
     -webkit-backdrop-filter: blur(2.2px);
     border: 1px solid rgba(255, 255, 255, 0.1);
-
 }
-
 
 .tech-categories {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 1rem;
+    gap: 2.5rem;
     margin-bottom: 0.5rem;
 }
 
@@ -162,7 +176,6 @@ a {
     align-items: flex;
 }
 
-
 .tech-category-title {
     margin-bottom: 0.3rem;
     font-weight: 600;
@@ -171,25 +184,19 @@ a {
 }
 
 .tech-grid {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: center;
-    gap: 0.1rem;
+    display: flex;
+    gap: 0.5rem;
 }
-
-
 
 .devicon {
     width: 42px;
     height: 42px;
+    margin: 8px;
     opacity: 0.9;
     transition: transform 0.2s ease;
 }
 
 .devicon:hover {
-    background-color: rgb(19, 22.5, 30.5);
-    box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
-
     z-index: 1000;
     transform: scale(1.1) perspective(600px) translateZ(250px);
     opacity: 1;
