--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ h2 {
     background-image: linear-gradient(120deg, rgba(245, 222, 179, 0.173) 2px, transparent 0);
 
     justify-content: center;
+    /* Pulsating glow effect */
+
 }
 
 /*
