--- a/styles.css
+++ b/styles.css
@@ -8,49 +8,6 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    background: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    perspective: 1000px;
-    /* Added to ensure 3D perspective for all children */
-    transform-style: preserve-3d;
-    /* Preserve 3D transformations */
-}
-
-
-
-.paper-effect {
-    all: unset;
-    display: flex;
-    flex-direction: column;
-
-    padding: 1rem;
-    background: transparent;
-    padding: 2px;
-
-
-}
-
-/*
- border-left: 5px solid white;
-    border-top: 5px solid white;
-*/
-
-.paper-footer {
-    transform: perspective(600px) rotateX(-40deg) scale(0.8) translateZ(20px);
-    border-radius: 4px;
-}
-
-.profile-section {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 2rem;
-    max-width: 950px;
-    margin-top: 2.5%;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .profile-img {
@@ -58,151 +15,66 @@ body {
     width: 250px;
     height: 250px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 20%;
 }
 
-.presentation {
-    flex: 1;
-    font-size: 1.1rem;
-    line-height: 1.5;
-}
-
-.presentation h1,
-.presentation h3 {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-}
-
-.highlight {
-    color: #b4937D;
-}
-
-.keyword {
-    color: #b4937D;
-}
-
-.description {
-    text-align: center;
-    font-size: 1.1rem;
-}
-
-.profile-links {
+.profile-container {
     display: flex;
+    width: 100%;
+    flex-direction: column;
     flex-wrap: wrap;
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.profile-links a {
-    display: flex;
     align-items: center;
-    gap: 0.3rem;
-    font-weight: 600;
-    text-decoration: none;
 }
 
-.icon {
-    width: 20px;
-    height: 20px;
+main {
+    display: flex;
+    justify-content: center;
 }
 
-a {
-    display: inline-block;
-    outline: 0;
+.book {
+    display: flex;
+    position: relative;
+    width: 1200px;
+    height: 700px;
+    padding-inline: 10px;
+    border: 2px solid #052940;
+    background-color: #052940;
+}
+
+.book>#next {
+    display: flex;
+    height: 50px;
+    width: 50px;
     text-align: center;
-    cursor: pointer;
-    min-width: 80px;
-    height: 32px;
-    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 93%;
+    right: 0;
 }
 
-#t3-projects-section {
+.book>#back {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 10%;
-}
-
-
-.card-grid {
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 364px));
-    gap: 1.5rem;
-    margin-bottom: 20px;
-}
-
-.card {
-    border: 1px solid #ddd;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    transition: transform 0.2s ease;
-}
-
-.card:hover {
-    box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
-    z-index: 1000;
-    transform: perspective(600px) translateZ(150px);
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(4.2px);
-    -webkit-backdrop-filter: blur(2.2px);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.tech-categories {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 2.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.tech-category {
-    display: flex;
-    flex-direction: column;
-    align-items: flex;
-}
-
-.tech-category-title {
-    margin-bottom: 0.3rem;
-    font-weight: 600;
-    font-size: 0.9rem;
+    height: 50px;
+    width: 50px;
     text-align: center;
+    position: absolute;
+    top: 93%;
+    right: 1;
 }
 
-.tech-grid {
-    display: flex;
-    gap: 0.5rem;
+
+.book>section {
+    display: inline-flex;
+    width: 50%;
+    height: 100%;
+    background-color: rgb(6, 30, 47);
 }
 
-.devicon {
-    width: 42px;
-    height: 42px;
-    margin: 8px;
-    opacity: 0.9;
-    transition: transform 0.2s ease;
+.book>section+section {
+    background-color: rgb(6, 30, 47);
 }
 
-.devicon:hover {
-    z-index: 1000;
-    transform: scale(1.1) perspective(600px) translateZ(250px);
-    opacity: 1;
-}
+.book>section:nth-child(3) {
+    width: 1%;
+    background-color: #052940;
 
-@media (max-width: 600px) {
-    .profile-section {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .description {
-        flex: unset;
-    }
-
-    .tech-categories {
-        flex-direction: column;
-    }
 }
