--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,26 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    perspective: 1000px;
-    /* Added to ensure 3D perspective for all children */
-    transform-style: preserve-3d;
-    /* Preserve 3D transformations */
+
 }
 
+#effect {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 25%;
 
+    filter: contrast(150%) brightness(50%) blur(1px) sepia();
+}
+
+/*
+    background-blend-mode: hue;
+   background-image:
+        linear-gradient(to top, #03045e, #023e8a, #0077b6, #0096c7), url(https://grainy-gradients.vercel.app/noise.svg);
+*/
 
 .paper-effect {
     all: unset;
