--- a/src/components/ProjectGrid.astro
+++ b/src/components/ProjectGrid.astro
@@ -1,5 +1,4 @@
 <section id="t3-projects-section">
-    <h2>Projects</h2>
     <div class="card-grid">
         <slot />
     </div>
@@ -11,6 +10,7 @@
         flex-direction: column;
         justify-content: center;
         margin: 0 10%;
+        width: 42%;
     }
     .card-grid {
         display: flex;
