--- a/src/components/TechGrid.astro
+++ b/src/components/TechGrid.astro
@@ -35,4 +35,14 @@ const { title = "CategoryName" } = Astro.props;
         display: flex;
         gap: 0.5rem;
     }
+
+    /*
+	.tech-categories {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		gap: 2.5rem;
+		margin-bottom: 0.5rem;
+	}
+*/
 </style>
