--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,95 +33,59 @@ import Carousel from "../components/Carousel.astro";
 			alt=""
 			id="effect"
 		/>
-		<main id="ex1-layer" class="container">
-			<div class="paper-effect">
+
+		<main>
+			<div class="left-info">
 				<PresentationCard />
+			</div>
+			<div class="right-info">
 				<section>
-					<h2 style="text-align: center;">Tech Stack</h2>
-					<div class="tech-categories">
-						<TechGrid title="Languages">
-							<Icon
-								src="/icons/java-svgrepo-com.svg"
-								type="dev"
-								title="Java"
+					<h2>Knowelge</h2>
+					<h5>Things I researched or learned and their links</h5>
+					<Carousel>
+						<CarouselItem
+							title="How work Async"
+							href="https://www.youtube.com/watch?v=eiC58R16hb8"
+							image="/images/jsloop.gif"
+						>
+							Null
+						</CarouselItem>
+						<CarouselItem
+							title="Crafting Interpreters"
+							href="https://craftinginterpreters.com/"
+							image="/images/craftinginterpreters.png"
+						>
+							Null
+						</CarouselItem>
+						<CarouselItem
+							title="Millon dolar error"
+							href="https://medium.com/%40dilhan9g/the-billion-dollar-mistake-the-invention-of-null-1767465ee9e1"
+							image="/images/nullptr.jpg"
+						>
+							Null
+						</CarouselItem>
+					</Carousel>
+				</section>
+				<section>
+					<h2>Projects</h2>
+					<h5>Top 3</h5>
+					<div class="project-section">
+						<ProjectGrid>
+							<ProjectCard
+								title="Rlox lang"
+								description="A programming language based on jlox from Crafting Interpreters"
+								link="https://github.com/Garkatron/Rust-Lox-Interpreter"
 							/>
-							<Icon
-								src="/icons/rust-svgrepo-com.svg"
-								type="dev"
-								title="Rust"
+							<ProjectCard
+								title="Rust-Coded LRU"
+								description="Rust LRU Cache"
+								link="https://github.com/Garkatron/LRU-Cache-Rust"
 							/>
-							<Icon
-								src="/icons/js-svgrepo-com.svg"
-								type="dev"
-								title="JavaScript"
-							/>
-							<Icon
-								src="/icons/python-svgrepo-com.svg"
-								type="dev"
-								title="Python"
-							/>
-							<Icon
-								src="/icons/kotlin-svgrepo-com.svg"
-								type="dev"
-								title="Kotlin"
-							/>
-						</TechGrid>
-						<TechGrid title="Frameworks & Libraries">
-							<Icon
-								src="/icons/bootstrap-4-logo-svgrepo-com.svg"
-								type="dev"
-								title="Bootstrap"
-							/>
-						</TechGrid>
-
-						<TechGrid title="Tools">
-							<Icon
-								src="/icons/git-svgrepo-com.svg"
-								type="dev"
-								title="Git"
-							/>
-							<Icon
-								src="/icons/postman-icon-svgrepo-com.svg"
-								type="dev"
-								title="Postman"
-							/>
-						</TechGrid>
-
-						<TechGrid title="Other">
-							<Icon
-								src="/icons/linux-svgrepo-com.svg"
-								type="dev"
-								title="Linux"
-							/>
-							<Icon
-								src="/icons/android-svgrepo-com.svg"
-								type="dev"
-								title="Android"
-							/>
-							<Icon
-								src="/icons/sql-database-generic-svgrepo-com.svg"
-								type="dev"
-								title="SQL Database"
-							/>
-						</TechGrid>
+						</ProjectGrid>
 					</div>
 				</section>
-
-				<hr />
-
-				<section class="project-section">
-					<ProjectGrid>
-						<ProjectCard
-							title="Rlox lang"
-							description="A programming language based on jlox from Crafting Interpreters"
-							link="https://github.com/Garkatron/Rust-Lox-Interpreter"
-						/>
-						<ProjectCard
-							title="Rust-Coded LRU"
-							description="Rust LRU Cache"
-							link="https://github.com/Garkatron/LRU-Cache-Rust"
-						/>
-					</ProjectGrid>
+				<section>
+					<h5>More projects</h5>
 
 					<Carousel>
 						<CarouselItem
@@ -165,6 +129,19 @@ import Carousel from "../components/Carousel.astro";
 		overflow-y: auto;
 	}
 
+	body,
+	main {
+		margin: 0;
+		padding: 0;
+	}
+
+	main {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+		min-height: 100vh;
+	}
 	#effect {
 		position: fixed;
 		top: 0;
@@ -177,22 +154,23 @@ import Carousel from "../components/Carousel.astro";
 		filter: contrast(150%) brightness(50%) blur(1px) sepia();
 	}
 
-	body {
-		min-height: 100%;
-		margin: 0;
-		padding: 0;
-		background: transparent;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+	.left-info {
+		width: 30%;
+		flex-shrink: 0;
 	}
 
-	.paper-effect {
-		all: unset;
+	.right-info {
+		flex: 1;
 		display: flex;
 		flex-direction: column;
-		padding: 1rem;
-		background: transparent;
+		padding: 2rem;
+		box-sizing: border-box;
+		align-items: center;
+		border-left: 2px solid white;
+	}
+
+	.right-info > section {
+		width: 99%;
 	}
 
 	a {
@@ -205,34 +183,10 @@ import Carousel from "../components/Carousel.astro";
 		color: rgb(255, 255, 255);
 	}
 
-	.tech-categories {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		gap: 2.5rem;
-		margin-bottom: 0.5rem;
-	}
-
 	.project-section {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-	}
-
-	@media (max-width: 600px) {
-		.profile-section {
-			flex-direction: column;
-			align-items: center;
-			text-align: center;
-		}
-
-		.description {
-			flex: unset;
-		}
-
-		.tech-categories {
-			flex-direction: column;
-		}
 	}
 </style>
