--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,36 +10,73 @@ const {
 <div class="card">
     <img src={image} alt="carousel element" />
 
-    <strong>{title}</strong><br />
-    {description}
+    <div class="card-content">
+        <strong>{title}</strong>
+        {description}
+    </div>
+
     <a href={link} target="_blank" rel="noopener noreferrer">See more</a>
 </div>
 
 <style>
     .card {
-        display: grid;
-        grid-template-rows: auto 1fr auto;
+        display: flex;
+        position: relative;
         flex-direction: column;
+        align-items: center;
+
+        width: 100%;
+        height: 500px;
 
         border: 1px solid #ddd;
         padding: 1rem;
         border-radius: 0.5rem;
-        transition: transform 0.2s ease;
+        overflow: hidden;
+
+        transition:
+            transform 0.3s ease,
+            box-shadow 0.3s ease,
+            border-radius 0.3s ease;
     }
 
     .card:hover {
-        box-shadow: 0px 0px 10px 10px rgb(19, 22.5, 30.5);
-        z-index: 1000;
-        transform: perspective(600px) translateZ(150px);
-        background: rgba(255, 255, 255, 0.05);
+        transform: scale(1.05);
         border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(4.2px);
-        -webkit-backdrop-filter: blur(2.2px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+
+        z-index: 1000;
+        box-shadow:
+            0 10px 25px rgba(0, 0, 0, 0.2),
+            0 4px 50px rgba(0, 0, 0, 0.1);
+
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
     }
-    img {
-        border-radius: 10px;
+
+    .card img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+        transition: transform 0.5s ease;
+    }
+
+    .card:hover img {
+        transform: scale(1.1);
+    }
+
+    .card-content {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        z-index: 1;
+    }
+
+    strong,
+    p {
+        margin-bottom: 1rem;
     }
 
     a {
@@ -51,6 +88,7 @@ const {
         padding: 0.25rem 0.5rem;
         place-self: start;
         transition: 150ms ease-in-out;
+        z-index: 1;
     }
 
     a:hover,
