--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,8 +40,7 @@ import Carousel from "../components/Carousel.astro";
 			</div>
 			<div class="right-info">
 				<section>
-					<h2>Projects</h2>
-					<h5>Top 3</h5>
+					<h2>Bests Projects</h2>
 					<div class="project-section">
 						<ProjectGrid>
 							<ProjectCard
@@ -66,35 +65,7 @@ import Carousel from "../components/Carousel.astro";
 					</div>
 				</section>
 				<section>
-					<h2>Knowelge</h2>
-					<h5>Things I researched or learned and their links</h5>
-					<Carousel reverse="true">
-						<CarouselItem
-							title="How work Async"
-							href="https://www.youtube.com/watch?v=eiC58R16hb8"
-							image="/images/jsloop.gif"
-						>
-							Null
-						</CarouselItem>
-						<CarouselItem
-							title="Crafting Interpreters"
-							href="https://craftinginterpreters.com/"
-							image="/images/craftinginterpreters.png"
-						>
-							Null
-						</CarouselItem>
-						<CarouselItem
-							title="Millon dolar error"
-							href="https://medium.com/%40dilhan9g/the-billion-dollar-mistake-the-invention-of-null-1767465ee9e1"
-							image="/images/nullptr.jpg"
-						>
-							Null
-						</CarouselItem>
-					</Carousel>
-				</section>
-
-				<section>
-					<h5>More projects</h5>
+					<h5>Other projects</h5>
 
 					<Carousel>
 						<CarouselItem
@@ -125,6 +96,33 @@ import Carousel from "../components/Carousel.astro";
 							image="/images/vonneuman.png"
 						>
 							Von Neumann architecture simulator in Python
+						</CarouselItem>
+					</Carousel>
+				</section>
+				<section>
+					<h2>Knowledge</h2>
+					<h5>Things I researched or learned and their links</h5>
+					<Carousel reverse="true">
+						<CarouselItem
+							title="How work Async"
+							href="https://www.youtube.com/watch?v=eiC58R16hb8"
+							image="/images/jsloop.gif"
+						>
+							Null
+						</CarouselItem>
+						<CarouselItem
+							title="Crafting Interpreters"
+							href="https://craftinginterpreters.com/"
+							image="/images/craftinginterpreters.png"
+						>
+							Null
+						</CarouselItem>
+						<CarouselItem
+							title="Millon dolar error"
+							href="https://medium.com/%40dilhan9g/the-billion-dollar-mistake-the-invention-of-null-1767465ee9e1"
+							image="/images/nullptr.jpg"
+						>
+							Null
 						</CarouselItem>
 					</Carousel>
 				</section>
