--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ import Carousel from "../components/Carousel.astro";
 			id="effect"
 		/>
 
-		<main>
+		<main class="slice">
 			<div class="left-info">
 				<PresentationCard />
 			</div>
@@ -99,42 +99,123 @@ import Carousel from "../components/Carousel.astro";
 						</CarouselItem>
 					</Carousel>
 				</section>
-				<section>
-					<h2>Knowledge</h2>
-					<h5>Things I researched or learned and their links</h5>
-					<Carousel reverse="true">
-						<CarouselItem
-							title="How work Async"
-							href="https://www.youtube.com/watch?v=eiC58R16hb8"
-							image="/images/jsloop.gif"
-						>
-							Null
-						</CarouselItem>
-						<CarouselItem
-							title="Crafting Interpreters"
-							href="https://craftinginterpreters.com/"
-							image="/images/craftinginterpreters.png"
-						>
-							Null
-						</CarouselItem>
-						<CarouselItem
-							title="Millon dolar error"
-							href="https://medium.com/%40dilhan9g/the-billion-dollar-mistake-the-invention-of-null-1767465ee9e1"
-							image="/images/nullptr.jpg"
-						>
-							Null
-						</CarouselItem>
-					</Carousel>
-				</section>
 			</div>
 		</main>
+		<div class="slice">
+			<section>
+				<h2>Knowledge</h2>
+				<h5>Things I researched or learned and their links</h5>
+				<Carousel reverse="true">
+					<CarouselItem
+						title="How work Async"
+						href="https://www.youtube.com/watch?v=eiC58R16hb8"
+						image="/images/jsloop.gif"
+					>
+						Null
+					</CarouselItem>
+					<CarouselItem
+						title="Crafting Interpreters"
+						href="https://craftinginterpreters.com/"
+						image="/images/craftinginterpreters.png"
+					>
+						Null
+					</CarouselItem>
+					<CarouselItem
+						title="Millon dolar error"
+						href="https://medium.com/%40dilhan9g/the-billion-dollar-mistake-the-invention-of-null-1767465ee9e1"
+						image="/images/nullptr.jpg"
+					>
+						Null
+					</CarouselItem>
+				</Carousel>
+			</section>
+		</div>
 	</body>
 </html>
 
+<script is:inline>
+	document.addEventListener("DOMContentLoaded", () => {
+		document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+			anchor.addEventListener("click", function (e) {
+				e.preventDefault();
+				const targetId = this.getAttribute("href");
+				const targetElement = document.querySelector(targetId);
+				if (targetElement) {
+					targetElement.scrollIntoView({
+						behavior: "instant",
+						block: "start",
+					});
+				}
+			});
+		});
+
+		let isScrolling = false;
+
+		window.addEventListener(
+			"wheel",
+			(e) => {
+				e.preventDefault();
+				if (isScrolling) return;
+				isScrolling = true;
+
+				setTimeout(() => {
+					isScrolling = false;
+				}, 300);
+				const sections = document.querySelectorAll(".slice");
+				if (sections.length === 0) {
+					console.warn(
+						"No se encontraron elementos con la clase .section",
+					);
+					return;
+				}
+
+				let currentSection = 0;
+
+				sections.forEach((section, index) => {
+					const rect = section.getBoundingClientRect();
+					if (
+						rect.top <= window.innerHeight / 2 &&
+						rect.bottom >= window.innerHeight / 2
+					) {
+						currentSection = index;
+					}
+				});
+
+				if (e.deltaY > 0) {
+					currentSection = Math.min(
+						currentSection + 1,
+						sections.length - 1,
+					);
+				} else {
+					currentSection = Math.max(currentSection - 1, 0);
+				}
+
+				sections[currentSection].scrollIntoView({ behavior: "smooth" });
+			},
+			{ passive: true },
+		);
+	});
+
+	window.addEventListener(
+		"keydown",
+		(e) => {
+			if (["ArrowUp", "ArrowDown", "Space"].includes(e.code)) {
+				e.preventDefault();
+			}
+		},
+		{ passive: false },
+	);
+</script>
+
 <style>
-	html {
+	.slice {
+		height: 100vh;
+	}
+	html,
+	body {
 		height: 100%;
 		overflow-y: auto;
+		scroll-behavior: smooth;
 	}
 
 	body,
