--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,31 +24,29 @@ const {
         position: relative;
         flex-direction: column;
         align-items: center;
-
         width: 100%;
-        height: 500px;
-
+        height: 400px;
         padding: 1rem;
         border-radius: 0.5rem;
         overflow: hidden;
-
+        filter: grayscale();
         transition:
             transform 0.3s ease,
             box-shadow 0.3s ease,
-            border-radius 0.3s ease;
+            border-radius 0.3s ease,
+            filter 0.3s ease;
     }
 
     .card:hover {
         transform: scale(1.05);
         border-radius: 16px;
-
         z-index: 1000;
         box-shadow:
             0 10px 25px rgba(0, 0, 0, 0.2),
             0 4px 50px rgba(0, 0, 0, 0.1);
-
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
+        filter: none; /* Removes grayscale on hover */
     }
 
     .card img {
